fix gap in main-container with 2em to 1em for @media screen

--- a/src/scss/main-nav.scss
+++ b/src/scss/main-nav.scss
@@ -9,6 +9,7 @@
 
   @media screen and (max-device-width: s.$max-device-width) {
     margin-top: s.$header-height-mob;
+   // background: url('~@images/background/bgimage.jpg')  no-repeat  #232323 /contain;
     background: #232323;
   }
 }
@@ -22,6 +23,9 @@
   align-items: center;
   overflow-x: hidden;
   gap: 2em;
+  @media screen and (max-device-width: s.$max-device-width) {
+    gap: 1em;
+  }
 
   #main-visual-container{
     width: 100%;
@@ -103,6 +107,7 @@
     border-bottom: 5px solid c.$fColorWhite;
     color: c.$fColorWhite;
   }
+
 
 }
 
